@@ -4,13 +4,11 @@ import ar.alex.biblioteca.api.dto.LibroDto;
 import ar.alex.biblioteca.business.Biblioteca;
 import ar.alex.biblioteca.business.Categoria;
 import ar.alex.biblioteca.business.Libro;
-import ar.alex.biblioteca.business.exceptions.LibroNoPresenteException;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Controller;
 import org.springframework.web.bind.annotation.*;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Controller
 public class LibroController {
@@ -18,7 +16,7 @@ public class LibroController {
     private final Biblioteca biblioteca = Biblioteca.getInstance();
 
     @GetMapping("/library/books/{isbn}")
-    public ResponseEntity<LibroDto> getLibroByIsbn(@PathVariable String isbn) throws LibroNoPresenteException {
+    public ResponseEntity<LibroDto> getLibroByIsbn(@PathVariable String isbn) {
         return ResponseEntity.ok(new LibroDto( biblioteca.getLibroPorISBN(isbn)));
     }
 
@@ -36,7 +34,13 @@ public class LibroController {
     public ResponseEntity<List<LibroDto>> getLibros(){
         return ResponseEntity.ok(biblioteca.getLibros()
                 .stream()
-                .map(LibroDto::new)
-                .collect(Collectors.toList()));
+                .map(LibroDto::new).toList());
+    }
+
+
+    @GetMapping("/library/books/category/{categoria}")
+    public ResponseEntity<List<LibroDto>> getLibrosByCategoria(@PathVariable String categoria) throws ReflectiveOperationException {
+        return ResponseEntity.ok(biblioteca.getLibrosPorCategoria(Categoria.create(categoria))
+                .stream().map(LibroDto::new).toList());
     }
 }
